[tool.poetry]
name = "sinnerb2-bot"
version = "1.0.0"
description = "Telegram bot for SinnerB2 channel"
authors = ["Micheal <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.3"
flask = "^2.2.5"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
